# MDH

./: README.md  run_build.sh  run_demos.sh  udo systemctl stop nginx
doc/: 夹爪控制接口协议格式v1.md  开发内容&研发计划.md
ros_ws/: config.json
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/motor_control/lib/motor_control/: motor_control_state
ros_ws/install/motor_control/share/ament_index/resource_index/parent_prefix_path/: motor_control
ros_ws/install/motor_control/share/motor_control/: local_setup.sh  package.sh  package.xml
ros_ws/install/motor_control_command_msgs/include/motor_control_command_msgs/motor_control_command_msgs/msg/: motor.h  motor.hpp  motor_control_command.h  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ros_ws/install/motor_control_command_msgs/include/motor_control_command_msgs/motor_control_command_msgs/msg/detail/: motor__functions.c  motor__rosidl_typesupport_introspection_cpp.hpp  motor__type_support.c  motor__type_support.h  motor__type_support.hpp  motor_control_command__functions.c  motor_control_command__rosidl_typesupport_fastrtps_c.h  motor_control_command__struct.hpp  motor_control_command__type_support.hpp
ros_ws/install/motor_control_command_msgs/local/lib/python3.10/dist-packages/motor_control_command_msgs-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ros_ws/install/motor_control_command_msgs/local/lib/python3.10/dist-packages/motor_control_command_msgs/msg/: _motor_control_command.py
ros_ws/install/motor_control_command_msgs/share/ament_index/resource_index/rosidl_interfaces/: motor_control_command_msgs
ros_ws/install/motor_control_command_msgs/share/motor_control_command_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/motor_control_command_msgs/share/motor_control_command_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_motor_control_command_msgs__rosidl_generator_cExport-noconfig.cmake  export_motor_control_command_msgs__rosidl_generator_cppExport.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_motor_control_command_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  motor_control_command_msgsConfig.cmake  motor_control_command_msgs__rosidl_typesupport_cppExport-noconfig.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cExport.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  motor_control_command_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_ws/install/motor_control_v2/include/motor_control_v2/: Node.hpp  http_server.hpp  internal_http_server.hpp  motor_command.hpp  serial_communication.hpp
ros_ws/install/motor_control_v2/lib/motor_control_v2/: motor_control_node
ros_ws/install/motor_control_v2/share/motor_control_v2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/motor_status/lib/motor_status/: motor_status
ros_ws/install/motor_status/share/ament_index/resource_index/parent_prefix_path/: motor_status
ros_ws/install/motor_status/share/motor_status/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/rmf_utils/lib/rmf_utils/cmake/: rmf_utils-config-version.cmake
ros_ws/install/rmf_utils/share/rmf_utils/: package.sh
ros_ws/log/: latest_build
ros_ws/src/claw_control/: CMakeLists.txt  package.xml
ros_ws/src/claw_control/src/: Node.cpp  Node.hpp  clawControl.cpp  clawControl.hpp  main.cpp
ros_ws/src/internal_msgs/motor_control_command_msgs/: CMakeLists.txt  package.xml
ros_ws/src/internal_msgs/motor_control_command_msgs/msg/: Motor.msg  MotorControlCommand.msg
ros_ws/src/motor_control/: CMakeLists.txt
ros_ws/src/motor_control/launch/: adapter_launch.xml
ros_ws/src/motor_control/src/: motor_control_state.cpp
ros_ws/src/motor_control_v2/: CMakeLists.txt  package.xml
ros_ws/src/motor_control_v2/include/motor_control_v2/: Node.hpp  http_server.hpp  internal_http_server.hpp  motor_command.hpp  motor_config.hpp  ros2_communication.hpp  serial_communication.hpp
ros_ws/src/motor_control_v2/src/: Node.cpp  http_server.cpp  internal_http_server.cpp  main.cpp  motor_command.cpp  motor_config.cpp  ros2_communication.cpp  serial_communication.cpp
ros_ws/src/motor_status/: CMakeLists.txt
ros_ws/src/motor_status/src/: motor_status.cpp
